--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "mongarerobert3@gmail.com, johnmuriithi339@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "auth0-js": "^9.21.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -18,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-openid-connect": "^2.16.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
