--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.1.1",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.16",
     "@react-pdf/renderer": "^3.1.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "auth0": "^3.4.0",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "express-oauth2-jwt-bearer": "^1.5.0",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
+    "next": "^13.4.7",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.14.1",
@@ -18,7 +29,10 @@
     "react-simple-maps": "^3.0.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "stream": "^0.0.2",
     "tailwindcss": "^3.3.2",
+    "url": "^0.11.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
