--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.1.1",
+    "@babel/runtime": "^7.1.2",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.16",
@@ -15,10 +16,10 @@
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
+    "eslint-config-next": "^13.4.7",
     "express-oauth2-jwt-bearer": "^1.5.0",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
-    "next": "^13.4.7",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
