--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,6 @@
-REACT_APP_API_SERVER_URL=http://localhost:3000
-REACT_APP_AUTH0_DOMAIN=toursntravel.us.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=uFYe1OgsE66FAHApvbA8ADJI0eyd9bsx
-REACT_APP_AUTH0_CALLBACK_URL=https://127.0.0.1:3000/dashboard
+REACT_APP_API_SERVER_URL=https://localhost:3000
+REACT_APP_AUTH0_DOMAIN=dev-fu78t5pi0oxgadcn.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=FTk4Yx2kxUj5yyyl2Yhh0fKtUgrkaFMJ
+REACT_APP_AUTH0_CALLBACK_URL=https://localhost:3000/dashboard
+REACT_APP_AUTH0_AUDIENCE=https://toursntravelapi
+
