--- a/backend/package.json
+++ b/backend/package.json
@@ -16,15 +16,18 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-oauth2-jwt-bearer": "^1.5.0",
     "express-openid-connect": "^2.16.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.1.0",
     "nodemailer": "^6.9.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-auth0": "^1.4.3"
   }
 }
