--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.29.0",
     "recharts": "^2.12.6",
     "slick-carousel": "^1.8.1",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
